--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -19,51 +19,87 @@ concurrency:
 
 permissions: {}
 
+env:
+  CHART_REPOSITORY: 'lfreleng-actions/test-makefile-helm-chart'
+  CHARTS_BUILD_DIR: 'test-makefile-helm-chart'
+
+# Publishing tests require a Nexus server and corresponding credential
+# A dedicated O-RAN server/instance credential is stored in 1Password
+# The variables/secrets are then set in the lfreleng-actions repository
+# NEXUS3_SERVER = 'https://nexus3.o-ran-sc.org'
+# NEXUS_PASSWORD -> 1Password: nexus-publish-action [Nexus 3]
+
 jobs:
   ### Test the GitHub Action in this Repository ###
-  tests:
-    name: "Test local GitHub Action"
-    runs-on: ubuntu-24.04
+  build:
+    name: 'Build Helm Charts'
+    runs-on: 'ubuntu-latest'
+    outputs:
+      CHARTS_BUILD_DIR: "${{ env.CHARTS_BUILD_DIR }}"
     permissions:
       contents: read
-    timeout-minutes: 10 # Increase this timeout value as needed
+    timeout-minutes: 10
     steps:
-      - name: "Checkout repository"
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-
-      # Perform setup prior to running test(s)
-      - name: "Testing setup step"
-        shell: bash
-        run: |
-          # Testing setup step
-          echo "Testing setup step"
-          echo "Testing setup step/summary output" >> "$GITHUB_STEP_SUMMARY"
-
-      - name: "Running local action: ${{ github.repository }}"
-        uses: ./
+      # yamllint disable-line rule:line-length
+      - uses: step-security/harden-runner@002fdce3c6a235733a90a27c80493a3241e56863  # v2.12.1
         with:
-          input: "test input 💬"
-
-      - name: "Validated local action: ${{ github.repository }}"
-        shell: bash
-        run: |
-          # Local action validation
-          echo "Validated local action: ${{ github.repository }}"
-          echo "Validation step summary output" >> "$GITHUB_STEP_SUMMARY"
+          egress-policy: audit
 
       # yamllint disable-line rule:line-length
-      - name: "Running local action: ${{ github.repository }} [Override Failure]"
-        uses: ./
-        id: failure
-        continue-on-error: true
-        with:
-          invalid_input: "Some garbage"
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683  # v4.2.2
 
-      # Failure testing is also important
-      - name: "Error if step above did NOT fail"
-        if: steps.failure.outcome == 'success'
-        shell: bash
-        run: |
-          # Error if step above did NOT fail
-          echo "Error: previous test step did NOT fail ❌"
-          exit 1
+      - name: 'Setup Helm'
+        # yamllint disable-line rule:line-length
+        uses: azure/setup-helm@b9e51907a09c216f16ebe8536097933489208112  # v4.3.0
+
+      - name: 'Run make'
+        # yamllint disable-line rule:line-length
+        uses: lfreleng-actions/make-action@361e48884a6b7d7b5fcfcb38f399aa14e45127dc  # v0.1.1
+        with:
+          repository: "${{ env.CHART_REPOSITORY }}"
+          path: "${{ env.CHARTS_BUILD_DIR }}"
+          make_args: "-C ${{ env.CHARTS_BUILD_DIR }}"
+
+      - name: 'Upload Helm Charts as artefacts'
+        # yamllint disable-line rule:line-length
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02  # v4.6.2
+        with:
+          name: "${{ env.CHARTS_BUILD_DIR }}"
+          path: "${{ env.CHARTS_BUILD_DIR }}/*.tgz"
+
+  nexus-publish:
+    name: 'Publish Helm Charts [O-RAN-SC Nexus 3]'
+    # Credential availability: job skips pull requests, but runs on merge
+    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
+    runs-on: 'ubuntu-latest'
+    needs:
+      - build
+    permissions:
+      contents: read
+    timeout-minutes: 3
+    steps:
+      # yamllint disable-line rule:line-length
+      - uses: step-security/harden-runner@002fdce3c6a235733a90a27c80493a3241e56863  # v2.12.1
+        with:
+          egress-policy: audit
+
+      # Required when tested action is local to this repository
+      # yamllint disable-line rule:line-length
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683  # v4.2.2
+
+      - name: 'Download Helm Charts'
+        # yamllint disable-line rule:line-length
+        uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093  # v4.3.0
+        with:
+          name: "${{ needs.build.outputs.CHARTS_BUILD_DIR }}"
+          path: "${{ needs.build.outputs.CHARTS_BUILD_DIR }}"
+
+      - name: 'Publish Helm Charts'
+        uses: ./
+        with:
+          nexus_server: "${{ vars.NEXUS3_SERVER }}"
+          nexus_password: "${{ secrets.NEXUS_PASSWORD }}"
+          repository_format: 'raw'
+          repository_name: 'helm-charts'
+          files_path: "${{ needs.build.outputs.CHARTS_BUILD_DIR }}"
+          file_pattern: '*.tgz'
