--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -3,18 +3,18 @@
 # SPDX-FileCopyrightText: 2025 The Linux Foundation
 
 # Action test/validation workflow
-name: "Test GitHub Action 🧪"
+name: 'Test GitHub Action 🧪'
 
 # yamllint disable-line rule:truthy
 on:
   workflow_dispatch:
   push:
-    branches: ["main"]
+    branches: ['main']
   pull_request:
-    branches: ["main"]
+    branches: ['main']
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
+  group: "${{ github.workflow }}-${{ github.ref }}"
   cancel-in-progress: true
 
 permissions: {}
@@ -43,7 +43,7 @@ jobs:
       # yamllint disable-line rule:line-length
       - uses: step-security/harden-runner@002fdce3c6a235733a90a27c80493a3241e56863  # v2.12.1
         with:
-          egress-policy: audit
+          egress-policy: 'audit'
 
       # yamllint disable-line rule:line-length
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683  # v4.2.2
@@ -81,7 +81,7 @@ jobs:
       # yamllint disable-line rule:line-length
       - uses: step-security/harden-runner@002fdce3c6a235733a90a27c80493a3241e56863  # v2.12.1
         with:
-          egress-policy: audit
+          egress-policy: 'audit'
 
       # Required when tested action is local to this repository
       # yamllint disable-line rule:line-length
